// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channels reducer should handle FETCH_CHANNELS_FAILURE 1`] = `
Object {
  "activeId": "",
  "allIds": Array [],
  "byId": Object {},
  "error": true,
  "isFetching": false,
}
`;

exports[`channels reducer should handle FETCH_CHANNELS_REQUEST 1`] = `
Object {
  "activeId": "",
  "allIds": Array [],
  "byId": Object {},
  "error": false,
  "isFetching": true,
}
`;

exports[`channels reducer should handle FETCH_CHANNELS_SUCCESS 1`] = `
Object {
  "activeId": "",
  "allIds": Array [
    "UCyIe-61Y8C4_o-zZCtO4ETQ",
    "UCO1cgjhGzsSYb1rsB4bFe4Q",
  ],
  "byId": Object {
    "UCO1cgjhGzsSYb1rsB4bFe4Q": Object {
      "id": "UCO1cgjhGzsSYb1rsB4bFe4Q",
    },
    "UCyIe-61Y8C4_o-zZCtO4ETQ": Object {
      "id": "UCyIe-61Y8C4_o-zZCtO4ETQ",
    },
  },
  "error": false,
  "isFetching": false,
}
`;

exports[`channels reducer should handle UPDATE_ACTIVE_CHANNEL 1`] = `
Object {
  "activeId": "UCO1cgjhGzsSYb1rsB4bFe4Q",
  "allIds": Array [
    "UCyIe-61Y8C4_o-zZCtO4ETQ",
    "UCO1cgjhGzsSYb1rsB4bFe4Q",
  ],
  "byId": Object {
    "UCO1cgjhGzsSYb1rsB4bFe4Q": Object {
      "id": "UCO1cgjhGzsSYb1rsB4bFe4Q",
    },
    "UCyIe-61Y8C4_o-zZCtO4ETQ": Object {
      "id": "UCyIe-61Y8C4_o-zZCtO4ETQ",
    },
  },
  "error": false,
  "isFetching": false,
}
`;

exports[`channels reducer should handle unknown action type 1`] = `
Object {
  "activeId": "",
  "allIds": Array [],
  "byId": Object {},
  "error": false,
  "isFetching": false,
}
`;

exports[`channels reducer should return the initial state 1`] = `
Object {
  "activeId": "",
  "allIds": Array [],
  "byId": Object {},
  "error": false,
  "isFetching": false,
}
`;
